Bug 521878 - Secondary monitor has severe ghosting/artifacts and window thumbnails stop updating after upgrading from Plasma 6.6.5 to 6.7.0. The issue only occurs when the monitor is rotated to 270°.
Summary: Secondary monitor has severe ghosting/artifacts and window thumbnails stop up...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.7.0
Platform: EndeavourOS Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 521671 521944 522203 522435 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-06-20 16:04 UTC by Pluviophile
Modified: 2026-07-06 15:23 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pluviophile 2026-06-20 16:04:03 UTC
Environment

Plasma: 6.7.0

KWin: 6.7.0

Session: Wayland

GPU:

AMD Radeon 780M (Ryzen 9 7845HX iGPU)

NVIDIA RTX 4060 Laptop GPU

NVIDIA Driver: nvidia-open-dkms 610.43.02

Mesa: 26.1.3

Distribution: EndeavourOS (Arch-based)

Steps to Reproduce

Boot into Plasma Wayland.

Connect a secondary monitor.

Rotate the secondary monitor to 270° (portrait, clockwise).

Move windows on the secondary monitor.

Actual Results

Severe ghosting / trailing artifacts appear while moving windows.

Window thumbnails/previews stop updating in the taskbar.

Desktop animations become abnormal.

The issue only occurs at 270° rotation.

0°, 90° and 180° rotations work normally.

Expected Results

The secondary monitor should render normally at 270° rotation without ghosting or broken previews.

Additional Information

The issue did not exist on Plasma 6.6.5.

After upgrading to Plasma 6.7.0 the issue appears immediately.

Restoring a system snapshot back to Plasma 6.6.5 makes the issue disappear completely.

The behavior is reproducible:

6.6.5 -> works

6.7.0 -> broken

rollback to 6.6.5 -> works again
Comment 1 anon 2026-06-24 03:18:36 UTC
I have the same issue on my side.
System:
  Plasma: 6.7.0
  KWin: 6.7.0
  Session: Wayland
  dGPU: AMD Radeon RX 7900 XTX
  iGPU: Ryzen 9 7950X3D
  Mesa: 26.1.3
  Kernel: 7.0.12-artix1-1
  Distribution: Artix Linux

Flickering or frozen elements on the hdmi display connected to igpu rotated 270°. Any other rotation works fine. Reverting kwin/kwin-x11 to 6.6.5 fixed the issue.
Comment 2 Bug Janitor Service 2026-06-29 20:50:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/9492
Comment 3 Zamundaaa 2026-06-30 00:02:51 UTC
*** Bug 522203 has been marked as a duplicate of this bug. ***
Comment 4 Vlad Zahorodnii 2026-06-30 07:17:09 UTC
Git commit 7f067ab1d671b98ebac99c5134dc92cc1ba3d74f by Vlad Zahorodnii, on behalf of Xaver Hugl.
Committed on 30/06/2026 at 07:00.
Pushed by vladz into branch 'master'.

backends/drm: correctly transform damage to buffer-local

With 270° rotation, the rotated damage ended up being outside of the buffer.

M  +2    -1    src/backends/drm/drm_egl_layer_surface.cpp

https://invent.kde.org/plasma/kwin/-/commit/7f067ab1d671b98ebac99c5134dc92cc1ba3d74f
Comment 5 Vlad Zahorodnii 2026-06-30 07:47:57 UTC
Git commit 86698ea9fad96c984fdc85b1bb6f084ff049a185 by Vlad Zahorodnii.
Committed on 30/06/2026 at 07:24.
Pushed by vladz into branch 'Plasma/6.7'.

backends/drm: correctly transform damage to buffer-local

With 270° rotation, the rotated damage ended up being outside of the buffer.


(cherry picked from commit 7f067ab1d671b98ebac99c5134dc92cc1ba3d74f)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +2    -1    src/backends/drm/drm_egl_layer_surface.cpp

https://invent.kde.org/plasma/kwin/-/commit/86698ea9fad96c984fdc85b1bb6f084ff049a185
Comment 6 Zamundaaa 2026-06-30 10:49:35 UTC
*** Bug 522435 has been marked as a duplicate of this bug. ***
Comment 7 Zamundaaa 2026-07-02 12:24:03 UTC
*** Bug 521944 has been marked as a duplicate of this bug. ***
Comment 8 Zamundaaa 2026-07-06 15:23:44 UTC
*** Bug 521671 has been marked as a duplicate of this bug. ***