backends/drm: correctly transform damage to buffer-local

With 270° rotation, the rotated damage ended up being outside of the buffer.

BUG: 521878